<resources>
    <!-- String for app name -->
    <string name="app_name">My Guardian App</string>

    <!-- String for label activity main -->
    <string name="label_main">The Guardian News</string>

    <!-- Text to display application label in splash screen -->
    <string name="legal_property">FDP Development - rev.1.0</string>

    <!-- String for label Date -->
    <string name="label_date">Date:</string>

    <!-- String for label Author -->
    <string name="label_author">Author:</string>

    <!-- String for label Section -->
    <string name="label_section">Section:</string>

    <!-- Text to display no news item information -->
    <string name="no_news_item">No news item available</string>

    <!-- Error message when there is no internet connectivity -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Text to display no title information -->
    <string name="no_title">No title available</string>

    <!-- Text to display no section name information -->
    <string name="no_section">No section available</string>

    <!-- Text to display no section name information -->
    <string name="no_web_url">No web URL available</string>

    <!-- Text to display no published date information -->
    <string name="no_date">No date available</string>

    <!-- Text to display no author information -->
    <string name="no_author">No author available</string>

    <!-- Text to display no author information -->
    <string name="no_date_parsing">Problem parsing the Date fo News Item</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Menu Item -->
    <string name="settings_menu_item">Settings</string>

    <!--  -->
    <!-- Strings for Section Preference -->
    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">@string/settings_section_home_value</string>

    <!-- String for Section Option (label/value)-->
    <string name="settings_section_home_label">Home</string>
    <string name="settings_section_home_value" translatable="false">home</string>

    <string name="settings_section_world_label">World</string>
    <string name="settings_section_world_value" translatable="false">world</string>

    <string name="settings_section_env_label">Environment</string>
    <string name="settings_section_env_value" translatable="false">environment</string>

    <string name="settings_section_business_label">Business</string>
    <string name="settings_section_business_value" translatable="false">business</string>

    <string name="settings_section_sport_label">Sport</string>
    <string name="settings_section_sport_value" translatable="false">sport</string>

    <string name="settings_section_education_label">Education</string>
    <string name="settings_section_education_value" translatable="false">education</string>

    <string name="settings_section_weather_label">Weather</string>
    <string name="settings_section_weather_value" translatable="false">weather</string>

    <string name="settings_section_film_label">Film</string>
    <string name="settings_section_film_value" translatable="false">film</string>

    <string name="settings_section_politics_label">Politics</string>
    <string name="settings_section_politics_value" translatable="false">politics</string>

    <string name="settings_section_tech_label">Technology</string>
    <string name="settings_section_tech_value" translatable="false">technology</string>

    <string name="settings_section_fashion_label">Fashion</string>
    <string name="settings_section_fashion_value" translatable="false">fashion</string>
    <!--  -->

    <!--  -->
    <!-- Strings for Page Size Preference -->
    <string name="settings_page_size_label">Number of pages</string>
    <string name="settings_page_size_key" translatable="false">page-size</string>
    <string name="settings_page_size_default">10</string>
    <!--  -->

    <!--  -->
    <!-- Strings for Order By Preference -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- String for Section Option (label/value)-->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!--  -->
</resources>
